test/parser/no_main_function.al
// RUN: compiler %s 2>&1 | filecheck %s
// CHECK: [[# @LINE + 1 ]]:1: error: main function not found
